--- a/Music Project/MainStoryboard.storyboard
+++ b/Music Project/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kp3-HJ-T8k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kp3-HJ-T8k">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -425,6 +425,7 @@
                         <outlet property="imageView" destination="8rx-u8-B1K" id="wJx-EK-cU7"/>
                         <outlet property="nameTextField" destination="c1m-4q-mi8" id="IEF-XO-xcD"/>
                         <outlet property="taglineTextField" destination="oaq-WM-VvV" id="Y9c-LU-Eu7"/>
+                        <outlet property="takePhotoButton" destination="TGv-cb-215" id="J5q-Ng-8cT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RhR-SY-ERJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
